0.1.1
-----

* --ndays argument. (#10)
* Document all configuration options. (#13)
* Allow global configuration on command line. (#12)
* Fixed .yaml extension to be .yml.

0.1.0
-----

* Initial version.